# need-for-speed-g25

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  config.yaml  index.html  installer.sh  installer_internal.sh
assets/: LC (1).yaml  LC.yaml  config.yaml  liberty_city_circuito1.yaml  liberty_city_circuito2.yaml  liberty_city_circuito3.yaml  liberty_city_map.yaml  san_andreas_circuito1.yaml  san_andreas_map.yaml  vice_city_circuito1.yaml  vice_city_circuito2.yaml  vice_city_circuito3.yaml  vice_city_map.yaml
client/: CMakeLists.txt  car_selection_dialog.cpp  car_selection_dialog.h  create_game_dialog.cpp  create_game_dialog.h  game_card_widget.cpp  lobby_client.cpp  lobby_client.h  lobby_window.cpp  lobby_window.h  theme_manager.cpp  theme_manager.h  waiting_room_widget.h
cmake/: Assets.cmake  CompilerWarnings.cmake  Dependencies.cmake  Executables.cmake  FetchContent_Declare.cmake  FindPackage.cmake  StaticData.cmake
editor/: CMakeLists.txt  building_item.cpp  checkpoint_item.cpp  checkpoint_item.h  editor_window.cpp  (+6 more)
src/client/connexion/: CMakeLists.txt  browser_controller.cpp  browser_controller.h  connexion.cpp  connexion.h  connexion_controller.cpp  connexion_controller.h  game_controller.cpp  game_controller.h  lobby_controller.cpp  lobby_controller.h  mock_connexion_controller.cpp  mock_connexion_controller.h  receiver.cpp  receiver.h  request_controller.cpp  request_controller.h  response_controller.cpp  response_controller.h  sender.cpp  sender.h
src/client/connexion/controllers/: CMakeLists.txt  creating_controller.cpp  creating_controller.h  game_controller.cpp  game_controller.h  searching_controller.cpp  searching_controller.h  selecting_controller.cpp  selecting_controller.h  waiting_controller.cpp  waiting_controller.h
src/client/connexion/requesters/: CMakeLists.txt  creating_requester.cpp  creating_requester.h  searching_requester.cpp  searching_requester.h  selecting_requester.cpp  selecting_requester.h  waiting_requester.cpp  waiting_requester.h
src/common/: CMakeLists.txt  buffer.h  emitter.h  liberror.h  macros.h  protocol.cpp  protocol.h  queue.h  resolver.cpp  resolver.h  resolvererror.cpp  resolvererror.h  socket.cpp  socket.h  structs.h  thread.h  timer_iterator.cpp  timer_iterator.h
src/common/dto/: CMakeLists.txt  dto.cpp  dto.h  dto_game.cpp  dto_game.h  dto_lobby.cpp  dto_lobby.h  dto_search.cpp  dto_search.h  dto_session.cpp  dto_session.h  macros.inl  macros_undef.inl  structs_serializable.cpp  structs_serializable.h
src/editor/: CMakeLists.txt  building_item.cpp  building_item.h  checkpoint_item.cpp  checkpoint_item.h  editor_window.cpp  editor_window.h  hint_item.cpp  hint_item.h  main.cpp  map_canvas.cpp  map_canvas.h  map_item.h  overpass_item.cpp  overpass_item.h  sensor_item.cpp  sensor_item.h  start_dialog.cpp  start_dialog.h  yaml_handler.cpp  yaml_handler.h
src/editor/maps/LibertyCity/: LC.yaml
src/editor/maps/SanAndreas/: SA.yaml
src/editor/maps/ViceCity/: vc.yaml
src/server/: CMakeLists.txt  acceptor.cpp  acceptor.h  args_parser.cpp  args_parser.h  clients_manager.cpp  clients_manager.h  main.cpp  server.cpp  server.h  sessions_monitor.cpp  sessions_monitor.h  test_simulador.cpp  test_simulador.h
src/server/client_handler/: CMakeLists.txt  browser_controller.cpp  browser_controller.h  client_handler.cpp  client_handler.h  controller.cpp  controller.h  game_controller.cpp  game_controller.h  lobby_controller.cpp  lobby_controller.h  receiver.cpp  receiver.h  sender.cpp  sender.h
src/server/client_handler/controllers/: CMakeLists.txt  game_controller.cpp  game_controller.h  search_controller.cpp  search_controller.h  session_controller.cpp  session_controller.h
src/server/config/: CMakeLists.txt  MapLoader.cpp  MapLoader.h  YamlGameConfig.cpp  YamlGameConfig.h  YamlInclude.h  convertor.cpp  convertor.h
src/server/logic/: GameSessionFacade.cpp  IRaceEvents.h  MatchSession.h  UpgradeSystem.cpp
src/server/model/: Bridge.h  CMakeLists.txt  Car.h  Hint.h  NpcCar.h  Player.h
src/server/physics/: CMakeLists.txt  IPhysicalBody.h  PhysicsWorld.cpp  PhysicsWorld.h
src/server/session/: CMakeLists.txt  game.cpp  game.h  game_loop.cpp  game_loop.h  session.cpp  session.h
src/server/session/NPC/: CMakeLists.txt  NPCType.h  NPCVehicle.cpp  NPCVehicle.h  RoadGraph.cpp  RoadGraph.h  TrafficSystem.cpp  TrafficSystem.h
src/server/session/logic/: CMakeLists.txt  GameSessionFacade.cpp  GameSessionFacade.h  MatchSession.cpp  MatchSession.h  NetworkTypes.h  RaceSession.cpp  RaceSession.h  UpgradeSystem.cpp  UpgradeSystem.h  types.h
src/server/session/logic/match/: CMakeLists.txt  MatchSession.cpp  MatchSession.h  MatchSessionBuilder.cpp  MatchSessionBuilder.h  MatchSessionIntermission.cpp  MatchSessionRaceInit.cpp  MatchSessionSnapshots.cpp  MatchSessionUpgrades.cpp
src/server/session/logic/race/: CMakeLists.txt  RaceSession.cpp  RaceSession.h  RaceSessionBuilder.cpp  RaceSessionBuilder.h  RaceSessionCheckpoints.cpp  RaceSessionResults.cpp  RaceSessionState.cpp
src/server/session/model/: Bridge.h  BridgeSensor.h  CMakeLists.txt  Car.h  CarType.h  Checkpoint.h  Entity.h  Hint.h  Player.h  Wall.h
src/server/session/physics/: Box2DBodyAdapter.h  Box2DHash.h  Box2DPhysicsFactory.cpp  Box2DPhysicsFactory.h  Box2DPhysicsWorld.cpp  Box2DPhysicsWorld.h  Box2dPhysicsBody.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  EntityFactory.cpp  EntityFactory.h  IPhysicalBody.h
(+146 files in other folders)
